Topic names in PAP should be configurable from application.yaml
Issue-ID: POLICY-4455
Change-Id: I89e9e6f7dbb07462f1ae497755965cb5a3f223a3
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>